Switch projects to Eclipse 3.7