@@ -1,15 +1,16 @@
 ========= Install Eclipse ==========
 
-1. Get: Eclipse SDK  or  Eclipse IDE for Java EE Developers
-       eclipse-SDK-3.6.2-win32.zip or eclipse-java-helios-SR2-win32.zip
+1. Get: Eclipse SDK
+       eclipse-SDK-3.7-win32.zip or eclipse-SDK-3?.7-win32-x86_64.zip
 
-2. Unzip it to directory: eclipse-3.6.2   (Optionally)
+2. Unzip it to directory: eclipse-3.7.0   (Optionally)
 
 3. Create Shortcut, provide path to JDK (for example -vm "C:\My\Programs\Java\jdk1.6.0_24\bin\javaw.exe")
    Or full Target on Windows 32:
-        D:\prog\dev\eclipse\eclipse-3.6.2\eclipse.exe -vm D:/jdk1.6.0/bin/javaw.exe -vmargs -Xmx456M
+        D:\prog\dev\eclipse\eclipse-3.7.0\eclipse.exe -vm D:/jdk1.6.0/bin/javaw.exe -vmargs -Xmx456M -XX:MaxPermSize=256m
 
-   On Windows 64 When using 64-bit JDK set -Xmx1024M:
+   On Windows 64 When using 64-bit JDK set:
+        -Xmx1024M -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=128m
 
 4. Install Eclipse Plugins.
     - Subclipse     (latest)               (From Eclipse Marketplace)
@@ -25,8 +26,7 @@
 
 ========= Install M2-Eclipse =========
 
-    Use the latest plugin http://m2eclipse.sonatype.org/
-    Official Update Site: http://m2eclipse.sonatype.org/sites/m2e
+    Is part of Eclipse distribution, Select  Indigo repository and type "maven"
 
 ========= maven build =========
 
@@ -55,8 +55,8 @@ MAVEN_OPTS=-Xmx256M -XX:MaxPermSize=256m -Xss1024k -XX:ReservedCodeCacheSize=64m
 
 ========= Install Google App Engine SDK for Java =========
 
-1. Install "Google plugins for Eclipse 3.6 version 2.2.1.v201103311225"
-    site url: http://dl.google.com/eclipse/plugin/3.6
+1. Install "Google plugins for Eclipse 3.7 version 2.3.2.r37..."
+    site url: http://dl.google.com/eclipse/plugin/3.7
 
     You may install SDKs bundle for GAE and GWT from google site for faster download.
     In client projects we don't use GAE SDK installed inside Eclipse!
@@ -65,9 +65,9 @@ MAVEN_OPTS=-Xmx256M -XX:MaxPermSize=256m -Xss1024k -XX:ReservedCodeCacheSize=64m
     Star this bugs: http://code.google.com/p/googleappengine/issues/detail?id=3401
                     http://code.google.com/p/googleappengine/issues/detail?id=2282
 
-2. Download and unzip appengine-java-sdk-1.4.3.zip
-		from http://googleappengine.googlecode.com/files/appengine-java-sdk-1.4.3.zip
-3. Unzip GAE SDK to C:\3p-libs\gae\appengine-java-sdk-1.4.3  (or make NTFS link)
+2. Download and unzip appengine-java-sdk-1.5.1.zip
+		from http://code.google.com/appengine/downloads.html
+3. Unzip GAE SDK to C:\3p-libs\gae\appengine-java-sdk-1.5.1  (or make NTFS link)
 4. Configure Eclipse -> Preferences -> Google -> App Engine to use SDK above!
 
 4. For heavy server side development use jrebel
